; ModuleID = '/home/carl/AnghaBench/linux/drivers/ide/extr_ide-floppy.c_ide_floppy_init_media.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ide/extr_ide-floppy.c_ide_floppy_init_media.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gendisk = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.gendisk*)* @ide_floppy_init_media to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ide_floppy_init_media(i32* %0, %struct.gendisk* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.gendisk*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.gendisk* %1, %struct.gendisk** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %8 = call i64 @ide_do_test_unit_ready(i32* %6, %struct.gendisk* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %13 = call i32 @ide_do_start_stop(i32* %11, %struct.gendisk* %12, i32 1)
  br label %14

14:                                               ; preds = %10, %2
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @ide_floppy_get_capacity(i32* %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @ide_gd_capacity(i32* %18)
  %20 = call i32 @set_capacity(%struct.gendisk* %17, i32 %19)
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i64 @ide_do_test_unit_ready(i32*, %struct.gendisk*) #1

declare dso_local i32 @ide_do_start_stop(i32*, %struct.gendisk*, i32) #1

declare dso_local i32 @ide_floppy_get_capacity(i32*) #1

declare dso_local i32 @set_capacity(%struct.gendisk*, i32) #1

declare dso_local i32 @ide_gd_capacity(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
